<resources>

    <string name="app_name">DistanceTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tutorial">Tutorial</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="title_activity_tracking_gps">TrackingGPSActivity</string>
    <string name="currently_tracking_">Currently Tracking...</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="title_activity_stop_tracking_gps">StopTrackingGPSActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="btn_skip_tutorial">Skip Tutorial</string>
    <string name="lbltracking_stopped">Tracking Stopped</string>
    <string name="lbllat">lat:</string>
    <string name="lbllong">long:</string>
    <string name="lblstarttime">Start Time:</string>
    <string name="lblstoptime">Time Stopped:</string>
    <string name="chronometer">Chronometer</string>
    <string name="btnviewresults">View Results</string>
    <string name= "milestraveled"> Miles Traveled</string>
    <string name= "tripidselect"> Select a TripID</string>
    <string name= "calculate">Calculate</string>
    <string name= "timetraveled"> Time Traveled</string>
    <string name= "Back"> Back</string>
    <string name="btnselecttrip">Click here to Select trip</string>
    <string name="map">map</string>
    <string name="MapButton">View Map</string>

</resources>